# requisicoes_assincronas

./: README.md  pyproject.toml
requisicoes_assincronas/: __init__.py  executa.py  executa_limitando.py  main.py
requisicoes_assincronas/constants/: __init__.py  ibge.py  requisicao.py
requisicoes_assincronas/exemplo/: executa_limitando.py
requisicoes_assincronas/models/: __init__.py  requisicao.py
requisicoes_assincronas/utils/: __init__.py  funcoes.py  requisicao.py
