[tool.poetry]
name = "requisicoes-assincronas"
version = "0.1.0"
description = ""
authors = ["abelsalim <abelsalim@proton.me>"]
readme = "README.md"
packages = [{include = "requisicoes_assincronas"}]

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
